// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, isDisabled: true, isLoading: false and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" cx="12" cy="12" r="6"/></svg>') !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(min-width:480px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
    padding-inline-start: 8px;
  }
}

@media(min-width:760px) {
  .text {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
    padding-inline-start: 8px;
  }
}

@media(min-width:1300px) {
  .text {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .text {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: 2px;
    padding-inline-start: 8px;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: false, isLoading: true and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
::slotted(input:focus)::before {
  border-radius: 50% !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: false, isLoading: true and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
::slotted(input:focus)::before {
  border-radius: 50% !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: true, isLoading: false and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23010205" cx="12" cy="12" r="6"/></svg>') !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: error, isDisabled: true, isLoading: false and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" cx="12" cy="12" r="6"/></svg>') !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: true and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
::slotted(input:focus)::before {
  border-radius: 50% !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: false, isLoading: true and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
::slotted(input:focus)::before {
  border-radius: 50% !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23010205" cx="12" cy="12" r="6"/></svg>') !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: none, isDisabled: true, isLoading: false and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" cx="12" cy="12" r="6"/></svg>') !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: false, isLoading: true and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
::slotted(input:focus)::before {
  border-radius: 50% !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: false, isLoading: true and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
::slotted(input:focus)::before {
  border-radius: 50% !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: true, isLoading: false and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23010205" cx="12" cy="12" r="6"/></svg>') !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: success, isDisabled: true, isLoading: false and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" cx="12" cy="12" r="6"/></svg>') !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: 2px;
  padding-inline-start: 8px;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: false, isLoading: false and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #FC4040 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #FC4040 !important;
  background-color: #FC4040 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23010205" cx="12" cy="12" r="6"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 50% !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FB0404 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #FB0404 !important;
    background-color: #FB0404 !important;
  }
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
      transition: unset !important;
    }
    ::slotted(input:hover), .text:hover ~ ::slotted(input) {
      transition: unset !important;
    }
}

}

.text {
  grid-area: 1 / 2;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: false, isLoading: false and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #CC1922 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #CC1922 !important;
  background-color: #CC1922 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" cx="12" cy="12" r="6"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 50% !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #951219 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #951219 !important;
    background-color: #951219 !important;
  }
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
      transition: unset !important;
    }
    ::slotted(input:hover), .text:hover ~ ::slotted(input) {
      transition: unset !important;
    }
}

}

.text {
  grid-area: 1 / 2;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: true, isLoading: true and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FC4040;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: error, isDisabled: true, isLoading: true and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false, isLoading: false and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #88898C !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #FBFCFF !important;
  background-color: #FBFCFF !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23010205" cx="12" cy="12" r="6"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 50% !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #FBFCFF !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #AFB0B3 !important;
    background-color: #AFB0B3 !important;
  }
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
      transition: unset !important;
    }
    ::slotted(input:hover), .text:hover ~ ::slotted(input) {
      transition: unset !important;
    }
}

}

.text {
  grid-area: 1 / 2;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: false, isLoading: false and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #6B6D70 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #010205 !important;
  background-color: #010205 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" cx="12" cy="12" r="6"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 50% !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #010205 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #535457 !important;
    background-color: #535457 !important;
  }
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
      transition: unset !important;
    }
    ::slotted(input:hover), .text:hover ~ ::slotted(input) {
      transition: unset !important;
    }
}

}

.text {
  grid-area: 1 / 2;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true, isLoading: true and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: none, isDisabled: true, isLoading: true and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: false, isLoading: false and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #09D087 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #09D087 !important;
  background-color: #09D087 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23010205" cx="12" cy="12" r="6"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 50% !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #069561 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #069561 !important;
    background-color: #069561 !important;
  }
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
      transition: unset !important;
    }
    ::slotted(input:hover), .text:hover ~ ::slotted(input) {
      transition: unset !important;
    }
}

}

.text {
  grid-area: 1 / 2;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: false, isLoading: false and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #197E10 !important;
  outline: 0 !important;
  cursor: pointer !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #197E10 !important;
  background-color: #197E10 !important;
  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" cx="12" cy="12" r="6"/></svg>') !important;
}
::slotted(input:focus)::before {
  content: "" !important;
  position: absolute !important;
  top: -6px !important;
  left: -6px !important;
  right: -6px !important;
  bottom: -6px !important;
  border: 2px solid #1A44EA !important;
  border-radius: 50% !important;
}
::slotted(input:focus:not(:focus-visible))::before {
  border-color: transparent !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
@media(hover:hover) {
  ::slotted(input:hover), .text:hover ~ ::slotted(input) {
    border-color: #0E4809 !important;
  }
  ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
    border-color: #0E4809 !important;
    background-color: #0E4809 !important;
  }
@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    ::slotted(input:checked:hover), .text:hover ~ ::slotted(input:checked) {
      transition: unset !important;
    }
    ::slotted(input:hover), .text:hover ~ ::slotted(input) {
      transition: unset !important;
    }
}

}

.text {
  grid-area: 1 / 2;
  cursor: pointer;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, .24s) ease;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: true, isLoading: true and theme: dark 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #7E7F82 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #7E7F82 !important;
  background-color: #7E7F82 !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #09D087;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: success, isDisabled: true, isLoading: true and theme: light 1`] = `
":host {
  color-scheme: light dark !important;
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(input) {
  grid-area: 1 / 1 !important;
  position: relative !important;
  width: calc(6px + 2.125ex) !important;
  height: calc(6px + 2.125ex) !important;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  font-size: 1rem !important;
  flex-shrink: 0 !important;
  display: block !important;
  margin: 0 !important;
  padding: 0 !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: content-box !important;
  background: transparent 0% 0% / calc(6px + 2.125ex) !important;
  transition: border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease !important;
  border: 2px solid #949598 !important;
  outline: 0 !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
  border-radius: 50% !important;
}
::slotted(input:checked) {
  border-color: #949598 !important;
  background-color: #949598 !important;
}
label {
  display: grid;
  grid-template-columns: repeat(2, auto);
  justify-content: flex-start;
}
.text {
  grid-area: 1 / 2;
  cursor: default;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #949598;
  transition: color var(--p-transition-duration, .24s) ease;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, .24s) ease;
}
.spinner {
  position: relative;
  grid-area: 1 / 1;
  margin: 2px;
  justify-self: center;
  height: calc(6px + 2.125ex);
  width: calc(6px + 2.125ex);
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-size: 1rem;
  cursor: not-allowed;
}"
`;
